--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-forms",
   "version": "1.0.0",
   "description": "React form components",
-  "author": "maximerenou",
+  "author": "Maxime Renou",
   "license": "MIT",
-  "repository": "maximerenou/react-forms",
+  "repository": "bluesquare-packages/react-forms",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
